fix: 디렉토리 순서 변경 디버깅